<resources>
    <string name="app_name">BaseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_review">MovieReviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_select_all">Select All</string>
    <string name="txt_unselect_all">Unselect All</string>
    <string name="txt_order_items">Order Items</string>
    <string name="txt_add_more">Add More</string>
    <string name="txt_deliver_to">Deliver To</string>
    <string name="txt_place_order">Place Order</string>
    <string name="txt_total_amount">Total Amount</string>
    <plurals name="txt_cart_items_with_count">
        <item quantity="one">Cart : %1$d Item</item>
        <item quantity="other">Cart : %1$d Items</item>
    </plurals>
    <string name="txt_successfully_order_created">Successfully Order Created</string>
    <string name="txt_done">Done</string>
    <string name="txt_dollar">$%1$d</string>
    <string name="txt_opening_time_to">Opening time : %1$s to %2$s</string>

</resources>