<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.emarket.EMarketPlaceOrderActivity">

    <include
        android:id="@+id/tb_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tb_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/cl_footer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_deliver_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_deliver_to"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/spacing_16dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_deliver_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_48dp"
                android:background="@drawable/bg_edt_round_corner_stroke"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="@dimen/spacing_16dp"
                android:layout_marginVertical="@dimen/spacing_16dp"
                android:paddingStart="@dimen/spacing_8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_deliver_to"/>

            <TextView
                android:id="@+id/tv_order_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_order_items"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_deliver_address"
                android:layout_margin="@dimen/spacing_16dp"/>

            <TextView
                android:id="@+id/tv_add_more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_more"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_deliver_address"
                android:layout_margin="@dimen/spacing_16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_item_emarket_shop_cart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_items"
                app:layout_constraintBottom_toBottomOf="parent"
                android:clipToPadding="true"
                android:paddingBottom="@dimen/spacing_32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_total_amount_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_total_amount"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/spacing_16dp"/>

        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="10000 MMK"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/spacing_16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_place_order"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/spacing_16dp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_amount_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loadingView"
        layout="@layout/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>